--- a/SRC/Makefile.incl
+++ b/SRC/Makefile.incl
@@ -97,7 +97,9 @@ FE_INCLUDES  = -I$(FE)/matrix \
                -I$(FE)/element/20nbrick \
                -I$(FE)/element/27nbrick \
                -I$(FE)/element/upU \
-	       -I$(FE)/element/UP_ucdavis \
+            -I$(FE)/element/tetrahedron \
+            -I$(FE)/element/UP_ucdavis \
+	       -I$(FE)/element/surfaceLoad \
                -I$(FE)/element/UP-ucsd \
                -I$(FE)/element/TotalLagrangianFD20NodeBrick \
                -I$(FE)/element/brick \
