--- a/.gitattributes
+++ b/.gitattributes
@@ -2887,6 +2887,9 @@ SRC/element/surfaceLoad/SurfaceLoad.cpp -text
 SRC/element/surfaceLoad/SurfaceLoad.h -text
 SRC/element/surfaceLoad/TriSurfaceLoad.cpp -text
 SRC/element/surfaceLoad/TriSurfaceLoad.h -text
+SRC/element/tetrahedron/FourNodeTetrahedron.cpp -text
+SRC/element/tetrahedron/FourNodeTetrahedron.h -text
+SRC/element/tetrahedron/Makefile -text
 SRC/element/triangle/Makefile -text
 SRC/element/triangle/Tri31.cpp -text
 SRC/element/triangle/Tri31.h -text
