--- a/MAKES/Makefile.def.EC2-UBUNTU
+++ b/MAKES/Makefile.def.EC2-UBUNTU
@@ -27,28 +27,40 @@
 
 # sudo in and type the following:
 # sudo apt-get update 
+
 # sudo apt-get install subversion
 # svn co svn://opensees.berkeley.edu/usr/local/svn/OpenSees/trunk OpenSees
 # sudo apt-get install emacs
 # sudo apt-get install make
-# sudo apt-get install tcl8.5
-# sudo apt-get install tcl8.5-dev
+# sudo apt-get install tcl8.6
+# sudo apt-get install tcl8.6-dev
 # sudo apt-get install gcc
 # sudo apt-get install g++
 # sudo apt-get install gfortran
+# sudo apt-get install python3-dev
 # mkdir lib
 # mkdir bin
 # cd OpenSees
 # cp ./MAKES/Makefile.def.EC2-UBUNTU ./Makefile.def
 # make
+# cd SRC/interpreter
+# make
+# cd ../..
+# edit Makefile.def, comment out INTERPRETER_LANGUAGE=PYTHON (LINE 62) and UNCOMMENT INTERPRTETER_LNAGUAGE=TCL (LINE 63)
+# make wipe
+# make
 
 
 # NOTE: if 64 bit the TCL dir is placed elsewhere; make will fail
 # you need to uncomment out the correct line below TL_LIBS = 
-# TCL_LIBS should point to the following: /usr/lib/x86_64-linux/gnu/libtcl8.5.so
+# TCL_LIBS should point to the following: /usr/lib/x86_64-linux/gnu/libtcl8.6.so
 
 # you can always find it using the find command:
-# find / -name libtcl8.5.so 2>/dev/null
+# find / -name libtcl8.6.so 2>/dev/null
+
+
+INTERPRETER_LANGUAGE = PYTHON
+#INTERPRETER_LANGUAGE = TCL
 
 # %---------------------------------%
 # |  SECTION 1: PROGRAM             |
@@ -86,8 +98,8 @@ LAPACKdir    = $(HOME)/OpenSees/OTHER/LAPACK
 SUPERLUdir   = $(HOME)/OpenSees/OTHER/SuperLU_5.1.1/SRC
 ARPACKdir    = $(HOME)/OpenSees/OTHER/ARPACK
 UMFPACKdir   = $(HOME)/OpenSees/OTHER/UMFPACK
-METISdir       = $(HOME)/OpenSees/OTHER/METIS
-CSPARSEdir       = $(HOME)/OpenSees/OTHER/CSPARSE
+METISdir     = $(HOME)/OpenSees/OTHER/METIS
+CSPARSEdir   = $(HOME)/OpenSees/OTHER/CSPARSE
 SRCdir       = $(HOME)/OpenSees/SRC
 
 
@@ -123,8 +135,7 @@ UMFPACK_LIBRARY = $(HOME)/lib/libUmfpack.a
 METIS_LIBRARY   = $(HOME)/lib/libMetis.a
 CSPARSE_LIBRARY   = $(HOME)/lib/libCSparse.a
 
-TCL_LIBRARY = /usr/lib/libtcl8.5.so
-#TCL_LIBRARY = /usr/lib/x86_64-linux/gnu/libtcl8.5.so
+TCL_LIBRARY = /usr/lib/x86_64-linux-gnu/libtcl8.6.so
 
 BLITZ_LIBRARY = $(HOME)/blitz/lib/libblitz.a
 GRAPHIC_LIBRARY     = 
@@ -167,15 +178,14 @@ RANLIBFLAGS     =
 #
 
 # modified as optimizaton currently causing problems with Steeln01 code
-ifeq ($(DEBUG_MODE), DEBUG)
+ifeq ($(INTERPRETER_LANGUAGE), PYTHON)
 
-C++FLAGS         = -Wall -D_LINUX -D_UNIX -D_TCL85   \
-		$(GRAPHIC_FLAG) $(RELIABILITY_FLAG) $(DEBUG_FLAG) $(PROGRAMMING_FLAG) \
-	         -g -pg 
-	      
 
-CFLAGS          = -Wall -pg $(GRAPHIC_FLAG) $(RELIABILITY_FLAG) $(DEBUG_FLAG) $(PROGRAMMING_FLAG)
-FFLAGS          = -Wall 
+C++FLAGS         = -Wall -D_LINUX -D_UNIX  -D_TCL85  \
+	$(GRAPHIC_FLAG) $(RELIABILITY_FLAG) $(DEBUG_FLAG) \
+	$(PROGRAMMING_FLAG) -fPIC -ffloat-store 
+CFLAGS          = -Wall -fPIC
+FFLAGS          = -Wall -fPIC
 
 # Linker
 LINKER          = $(CC++)
@@ -278,9 +288,10 @@ MACHINE_INCLUDES        = -I/usr/include \
 include $(FE)/Makefile.incl
 
 #TCL_INCLUDES = -I/usr/includes/tcl-private/generic
-TCL_INCLUDES = -I/usr/include/tcl8.5
+TCL_INCLUDES = -I/usr/include/tcl8.6
+PYTHON_INCLUDES = -I/usr/include/python3.5
 
-INCLUDES = $(TCL_INCLUDES) $(FE_INCLUDES) $(MACHINE_INCLUDES)
+INCLUDES = $(TCL_INCLUDES) $(FE_INCLUDES) $(MACHINE_INCLUDES) $(PYTHON_INCLUDES)
 
 
 
