--- a/MAKES/Makefile.def.EC2-UBUNTU
+++ b/MAKES/Makefile.def.EC2-UBUNTU
@@ -29,7 +29,7 @@
 # sudo apt-get update 
 
 # sudo apt-get install subversion
-# svn co svn://opensees.berkeley.edu/usr/local/svn/OpenSees/trunk OpenSees
+# svn co svn://peera.berkeley.edu/usr/local/svn/OpenSees/trunk OpenSees
 # sudo apt-get install emacs
 # sudo apt-get install make
 # sudo apt-get install tcl8.6
@@ -41,14 +41,14 @@
 # mkdir lib
 # mkdir bin
 # cd OpenSees
-# cp ./MAKES/Makefile.def.EC2-UBUNTU ./Makefile.def
+# cp ./MAKES/Makefile.def.EC2-UBUNTU ./Makefile.def   (NOTE: open file and maje sure INTERPRETER_LANGUAGE set to PYTHON, line 62)
 # make
 # cd SRC/interpreter
-# make
+# make                       (NOTE: if you check you should find opensees.so in the ~bin directory and an OpenSees.exe cmpiled with -fPIC which is slow)
 # cd ../..
 # edit Makefile.def, comment out INTERPRETER_LANGUAGE=PYTHON (LINE 62) and UNCOMMENT INTERPRTETER_LNAGUAGE=TCL (LINE 63)
 # make wipe
-# make
+# make                       (NOTE: new OpenSees.exe compiled with optimization flags)
 
 
 # NOTE: if 64 bit the TCL dir is placed elsewhere; make will fail
