updating win32 and win64 project files

--- a/Win64/proj/analysis/analysis.vcxproj
+++ b/Win64/proj/analysis/analysis.vcxproj
@@ -106,6 +106,7 @@
     </BuildLog>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\SRC\analysis\algorithm\equiSolnAlgo\NewtonHallM.cpp" />
     <ClCompile Include="..\..\..\SRC\analysis\analysis\Analysis.cpp" />
     <ClCompile Include="..\..\..\SRC\analysis\analysis\DirectIntegrationAnalysis.cpp" />
     <ClCompile Include="..\..\..\SRC\analysis\analysis\DomainDecompositionAnalysis.cpp" />
@@ -214,6 +215,7 @@
     <ClCompile Include="..\..\..\SRC\analysis\algorithm\equiSolnAlgo\SecantLineSearch.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\SRC\analysis\algorithm\equiSolnAlgo\NewtonHallM.h" />
     <ClInclude Include="..\..\..\SRC\analysis\analysis\Analysis.h" />
     <ClInclude Include="..\..\..\SRC\analysis\analysis\DirectIntegrationAnalysis.h" />
     <ClInclude Include="..\..\..\SRC\analysis\analysis\DomainDecompositionAnalysis.h" />
