--- a/Win64/proj/analysis/analysis.vcxproj.filters
+++ b/Win64/proj/analysis/analysis.vcxproj.filters
@@ -359,6 +359,9 @@
     <ClCompile Include="..\..\..\SRC\analysis\integrator\HHTExplicit_TP.cpp">
       <Filter>integrator</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\SRC\analysis\algorithm\equiSolnAlgo\NewtonHallM.cpp">
+      <Filter>algorithm</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\SRC\analysis\analysis\Analysis.h">
@@ -678,6 +681,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\SRC\analysis\integrator\HHTExplicit_TP.h">
       <Filter>integrator</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\SRC\analysis\algorithm\equiSolnAlgo\NewtonHallM.h">
+      <Filter>algorithm</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
