--- a/Win32/proj/modelbuilder/modelbuilder.vcxproj
+++ b/Win32/proj/modelbuilder/modelbuilder.vcxproj
@@ -49,7 +49,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>c:\Program Files\tcl\include;..\..\..\src\element\elasticBeamColumn;..\..\..\src\modelbuilder\tcl;..\..\..\src\coordTransformation;..\..\..\src\handler;..\..\..\src\domain\pattern;..\..\..\src\domain\load;..\..\..\src\actor\channel;..\..\..\src\domain\node;..\..\..\src\domain\constraints;..\..\..\src\tagged;..\..\..\src\actor\actor;..\..\..\src\domain\component;..\..\..\src\element;..\..\..\src\element\beam3d;..\..\..\src;..\..\..\src\matrix;..\..\..\src\domain\domain;..\..\..\src\modelbuilder;..\..\..\src\element\beam2d;..\..\..\src\nDarray;c:\Program Files\tcl;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\src\element\elasticBeamColumn;..\..\..\src\modelbuilder\tcl;..\..\..\src\coordTransformation;..\..\..\src\handler;..\..\..\src\domain\pattern;..\..\..\src\domain\load;..\..\..\src\actor\channel;..\..\..\src\domain\node;..\..\..\src\domain\constraints;..\..\..\src\tagged;..\..\..\src\actor\actor;..\..\..\src\domain\component;..\..\..\src\element;..\..\..\src\element\beam3d;..\..\..\src;..\..\..\src\matrix;..\..\..\src\domain\domain;..\..\..\src\modelbuilder;..\..\..\src\element\beam2d;..\..\..\src\nDarray;c:\Program Files (x86)\tcl;c:\Program Files (x86)\tcl\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <PrecompiledHeaderOutputFile>.\..\..\obj\modelbuilder\debug/modelbuilder.pch</PrecompiledHeaderOutputFile>
@@ -78,7 +78,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
-      <AdditionalIncludeDirectories>c:\Program Files\tcl\include;..\..\..\src\element\elasticBeamColumn;..\..\..\src\modelbuilder\tcl;..\..\..\src\coordTransformation;..\..\..\src\handler;..\..\..\src\domain\pattern;..\..\..\src\domain\load;..\..\..\src\actor\channel;..\..\..\src\domain\node;..\..\..\src\domain\constraints;..\..\..\src\tagged;..\..\..\src\actor\actor;..\..\..\src\domain\component;..\..\..\src\element;..\..\..\src\element\beam3d;..\..\..\src;..\..\..\src\matrix;..\..\..\src\domain\domain;..\..\..\src\modelbuilder;..\..\..\src\element\beam2d;..\..\..\src\nDarray;c:\Program Files\tcl;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\src\element\elasticBeamColumn;..\..\..\src\modelbuilder\tcl;..\..\..\src\coordTransformation;..\..\..\src\handler;..\..\..\src\domain\pattern;..\..\..\src\domain\load;..\..\..\src\actor\channel;..\..\..\src\domain\node;..\..\..\src\domain\constraints;..\..\..\src\tagged;..\..\..\src\actor\actor;..\..\..\src\domain\component;..\..\..\src\element;..\..\..\src\element\beam3d;..\..\..\src;..\..\..\src\matrix;..\..\..\src\domain\domain;..\..\..\src\modelbuilder;..\..\..\src\element\beam2d;..\..\..\src\nDarray;c:\Program Files (x86)\tcl;c:\Program Files (x86)\tcl\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
