--- a/Win64/proj/recorder/recorder.vcxproj.filters
+++ b/Win64/proj/recorder/recorder.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClCompile Include="..\..\..\SRC\recorder\PVDRecorder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\SRC\recorder\MPCORecorder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\SRC\recorder\AlgorithmIncrements.h">
@@ -155,6 +158,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\SRC\recorder\EnvelopeDriftRecorder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\SRC\recorder\MPCORecorder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
