--- a/Win32/proj/openSeesTk/OpenSeesTk.vcxproj
+++ b/Win32/proj/openSeesTk/OpenSeesTk.vcxproj
@@ -241,6 +241,9 @@
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="OpenSeesTk.rc" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
