--- a/Win32/proj/openSees/OpenSees.vcxproj
+++ b/Win32/proj/openSees/OpenSees.vcxproj
@@ -240,6 +240,9 @@
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="OpenSees.rc" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
