--- a/Win64/proj/openSeesTk/OpenSeesTk.vcxproj.filters
+++ b/Win64/proj/openSeesTk/OpenSeesTk.vcxproj.filters
@@ -9,6 +9,9 @@
       <UniqueIdentifier>{2bc7e379-e661-49a1-9927-c279347ffbb9}</UniqueIdentifier>
       <Extensions>h;hpp;hxx;hm;inl</Extensions>
     </Filter>
+    <Filter Include="Resource Files">
+      <UniqueIdentifier>{7f73f584-320c-40d6-9c52-7a1fa409af57}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\SRC\tcl\tkMain.cpp">
@@ -28,5 +31,10 @@
     <ClInclude Include="..\..\..\SRC\OPS_Globals.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="OpenSeesTk.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
