Add parameter and frictionModel commands to OpenSeesPy

--- a/SRC/interpreter/Makefile
+++ b/SRC/interpreter/Makefile
@@ -9,7 +9,7 @@ OBJS       = DL_Interpreter.o \
 	OpenSeesUniaxialMaterialCommands.o \
 	PythonModelBuilder.o PythonAnalysisBuilder.o
 
-OBJS  = DL_Interpreter.o OpenSeesCommands.o OpenSeesUniaxialMaterialCommands.o OpenSeesElementCommands.o OpenSeesTimeSeriesCommands.o OpenSeesPatternCommands.o OpenSeesSectionCommands.o OpenSeesOutputCommands.o OpenSeesCrdTransfCommands.o OpenSeesBeamIntegrationCommands.o OpenSeesNDMaterialCommands.o OpenSeesMiscCommands.o
+OBJS  = DL_Interpreter.o OpenSeesCommands.o OpenSeesUniaxialMaterialCommands.o OpenSeesElementCommands.o OpenSeesTimeSeriesCommands.o OpenSeesPatternCommands.o OpenSeesSectionCommands.o OpenSeesOutputCommands.o OpenSeesCrdTransfCommands.o OpenSeesBeamIntegrationCommands.o OpenSeesNDMaterialCommands.o OpenSeesMiscCommands.o OpenSeesParameterCommands.o OpenSeesFrictionModelCommands.o
 
 TclOBJS =  tclMain.o TclInterpreter.o TclWrapper.o $(OBJS)
 PythonOBJS = pythonMain.o PythonInterpreter.o PythonWrapper.o $(OBJS)
@@ -39,13 +39,40 @@ python:  $(PythonOBJS)
 OBJSm = OpenSeesCommandsPython.o OpenSeesUniaxialMaterialCommands.o PythonModelBuilder.o PythonAnalysisBuilder.o
 
 pythonmodule: $(PythonModuleOBJS)
+	$(RM) $(RMFLAGS) opensees.so;
+	@( \
+	for f in $(DIRS); \
+	do \
+		$(CD) $$f; \
+		$(MAKE); \
+		$(CD) ..; \
+	done );
+	$(CD) $(FE)/interpreter;
 	$(LINKER) $(LINKFLAGS) -shared $(PythonModuleOBJS) \
 	$(FE_LIBRARY) $(MACHINE_LINKLIBS) $(PYTHON_LIBRARY) \
 	$(MACHINE_NUMERICAL_LIBS) $(MACHINE_SPECIFIC_LIBS)  \
+	$(INTERPRETER_LIBS_MPI_PARAMETERS) \
 	 -o opensees.so
 
+
+INTERPRETER_LIBS_MPI_PARAMETERS =
+
+ifeq ($(PROGRAMMING_MODE), PARALLEL_INTERPRETERS)
+INTERPRETER_LIBS_MPI_PARAMETERS = \
+	$(FE)/actor/channel/MPI_Channel.o \
+	$(FE)/actor/machineBroker/MPI_MachineBroker.o \
+	$(FE)/actor/machineBroker/MachineBroker.o \
+	$(FE)/actor/actor/Actor.o \
+	$(FE)/actor/shadow/Shadow.o \
+	$(FE)/system_of_eqn/linearSOE/diagonal/MPIDiagonalSOE.o \
+	$(FE)/system_of_eqn/linearSOE/diagonal/MPIDiagonalSolver.o \
+	$(FE)/domain/subdomain/ActorSubdomain.o \
+	$(FE)/domain/subdomain/ShadowSubdomain.o
+endif
+
+
 # Miscellaneous
-tidy:	
+tidy:
 	@$(RM) $(RMFLAGS) Makefile.bak *~ #*# core
 
 clean: tidy
